--- a/DA/0_data_extract.ipynb
+++ b/DA/0_data_extract.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1897,164 +1897,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_body1 = df_body[(df_body['creationdate']>='2022-10-01') & (df_body['creationdate']<='2022-10-30')]\n",
+    "df_body2 = df_body[(df_body['creationdate']>='2021-10-01') & (df_body['creationdate']<='2021-10-30')]\n",
+    "df_body3 = df_body[(df_body['creationdate']>='2020-10-01') & (df_body['creationdate']<='2020-10-30')]\n",
+    "df_body4 = df_body[(df_body['creationdate']>='2019-10-01') & (df_body['creationdate']<='2019-10-30')]\n",
+    "df_body5 = df_body[(df_body['creationdate']>='2018-10-01') & (df_body['creationdate']<='2018-10-30')]\n",
+    "df_body6 = df_body[(df_body['creationdate']>='2023-10-01') & (df_body['creationdate']<='2023-10-30')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_bodyconcat = pd.concat([df_body1, df_body2, df_body3, df_body4, df_body5, df_body6], axis = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>creationdate</th>\n",
-       "      <th>id</th>\n",
-       "      <th>posttypeid</th>\n",
-       "      <th>title</th>\n",
-       "      <th>owneruserid</th>\n",
-       "      <th>body</th>\n",
-       "      <th>answered_yn</th>\n",
-       "      <th>date</th>\n",
-       "      <th>year</th>\n",
-       "      <th>month</th>\n",
-       "      <th>day</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2023-10-26 15:34:53.830</td>\n",
-       "      <td>77368423</td>\n",
-       "      <td>2</td>\n",
-       "      <td>None</td>\n",
-       "      <td>508057.0</td>\n",
-       "      <td>&lt;p&gt;If all machines are on the same LAN, then y...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2023-10-26</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>10</td>\n",
-       "      <td>26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2023-11-01 08:52:42.577</td>\n",
-       "      <td>77401389</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Unable to do File Upload using sendkeys method...</td>\n",
-       "      <td>22838353.0</td>\n",
-       "      <td>&lt;p&gt;I am trying to automate a webpage using Sel...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2023-11-01</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>11</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2023-10-30 14:32:47.247</td>\n",
-       "      <td>77389520</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Run macro based on cell contents if cell changes</td>\n",
-       "      <td>22828175.0</td>\n",
-       "      <td>&lt;p&gt;I want to run a macro if a cell changes bas...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2023-10-30</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>10</td>\n",
-       "      <td>30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2023-10-30 14:36:20.843</td>\n",
-       "      <td>77389551</td>\n",
-       "      <td>2</td>\n",
-       "      <td>None</td>\n",
-       "      <td>12500315.0</td>\n",
-       "      <td>&lt;p&gt;Whilst you &lt;em&gt;could&lt;/em&gt; write your own wr...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2023-10-30</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>10</td>\n",
-       "      <td>30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2023-10-23 09:20:47.107</td>\n",
-       "      <td>77344034</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Asp.Net chunking cookie issue</td>\n",
-       "      <td>3365923.0</td>\n",
-       "      <td>&lt;p&gt;I am using ASP.NET Identity. The login app ...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2023-10-23</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>10</td>\n",
-       "      <td>23</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "             creationdate        id posttypeid  \\\n",
-       "0 2023-10-26 15:34:53.830  77368423          2   \n",
-       "1 2023-11-01 08:52:42.577  77401389          1   \n",
-       "2 2023-10-30 14:32:47.247  77389520          1   \n",
-       "3 2023-10-30 14:36:20.843  77389551          2   \n",
-       "4 2023-10-23 09:20:47.107  77344034          1   \n",
-       "\n",
-       "                                               title  owneruserid  \\\n",
-       "0                                               None     508057.0   \n",
-       "1  Unable to do File Upload using sendkeys method...   22838353.0   \n",
-       "2   Run macro based on cell contents if cell changes   22828175.0   \n",
-       "3                                               None   12500315.0   \n",
-       "4                      Asp.Net chunking cookie issue    3365923.0   \n",
-       "\n",
-       "                                                body  answered_yn        date  \\\n",
-       "0  <p>If all machines are on the same LAN, then y...            0  2023-10-26   \n",
-       "1  <p>I am trying to automate a webpage using Sel...            0  2023-11-01   \n",
-       "2  <p>I want to run a macro if a cell changes bas...            0  2023-10-30   \n",
-       "3  <p>Whilst you <em>could</em> write your own wr...            0  2023-10-30   \n",
-       "4  <p>I am using ASP.NET Identity. The login app ...            0  2023-10-23   \n",
-       "\n",
-       "   year  month  day  \n",
-       "0  2023     10   26  \n",
-       "1  2023     11    1  \n",
-       "2  2023     10   30  \n",
-       "3  2023     10   30  \n",
-       "4  2023     10   23  "
+       "(1629546, 12)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_body.head()"
+    "df_bodyconcat.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_body = df_body[df_body['creationdate']>='2021-11-30']"
+    "df_body = df_body[df_body['creationdate']>='2021-10-01']"
    ]
   },
   {
@@ -2066,7 +1956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2091,7 +1981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2101,7 +1991,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_bodyconcat['body_prep'] = df_bodyconcat['body'].apply(cleanhtml)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2110,7 +2009,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_bodyconcat_wl = df_bodyconcat[['id', 'creationdate', 'body_prep']].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2120,22 +2028,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df_wl' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[21], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m df_wl[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mover4\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mdf_wl\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbody_prep\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mapply(wordlen)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df_wl' is not defined"
+     ]
+    }
+   ],
    "source": [
     "df_wl['over4'] = df_wl['body_prep'].apply(wordlen)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_bodyconcat_wl['over4'] = df_bodyconcat_wl['body_prep'].apply(wordlen)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 전체 데이터셋 \n",
     "with open('../../data/df_wl.pkl', 'wb') as f:\n",
     "    pickle.dump(df_wl, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 전체 데이터셋 \n",
+    "with open('../../data/df_bodyconcat_wl.pkl', 'wb') as f:\n",
+    "    pickle.dump(df_bodyconcat_wl, f)"
    ]
   },
   {
