--- a/DA/0_data_extract.ipynb
+++ b/DA/0_data_extract.ipynb
@@ -1940,11 +1940,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_body = df_body[df_body['creationdate']>='2021-10-01']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2021-10-01 00:00:26.287000')"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_body['creationdate'].min()"
    ]
   },
   {
@@ -1956,7 +1976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1981,7 +2001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2000,7 +2020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2009,7 +2029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2018,38 +2038,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "def wordlen(text):\n",
-    "    return [x for x in text.split(' ') if len(x) > 4]"
+    "    return [x for x in text.split(' ') if len(x) >= 4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df_wl' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[21], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m df_wl[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mover4\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mdf_wl\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbody_prep\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mapply(wordlen)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'df_wl' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_wl['over4'] = df_wl['body_prep'].apply(wordlen)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2058,7 +2066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2069,13 +2077,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 전체 데이터셋 \n",
     "with open('../../data/df_bodyconcat_wl.pkl', 'wb') as f:\n",
     "    pickle.dump(df_bodyconcat_wl, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>creationdate</th>\n",
+       "      <th>body_prep</th>\n",
+       "      <th>over4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>74084204</td>\n",
+       "      <td>2022-10-16 02:22:46.293</td>\n",
+       "      <td>If you still want to have access to the consol...</td>\n",
+       "      <td>[still, access, console, while, looking, pictu...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>74049122</td>\n",
+       "      <td>2022-10-13 00:00:13.400</td>\n",
+       "      <td>I am trying to figure out if someone reacted t...</td>\n",
+       "      <td>[trying, figure, someone, reacted, message, tr...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>74025233</td>\n",
+       "      <td>2022-10-11 08:34:24.547</td>\n",
+       "      <td>Solution</td>\n",
+       "      <td>[Solution]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>73975523</td>\n",
+       "      <td>2022-10-06 14:28:25.093</td>\n",
+       "      <td>Without extension you cannot change urls and c...</td>\n",
+       "      <td>[Without, extension, cannot, change, customize]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>73972231</td>\n",
+       "      <td>2022-10-06 10:21:18.360</td>\n",
+       "      <td>I fixed this problem i just use and</td>\n",
+       "      <td>[fixed, problem]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43414027</th>\n",
+       "      <td>77303116</td>\n",
+       "      <td>2023-10-16 15:12:18.237</td>\n",
+       "      <td>Im using quotfancyquot quotes in my links this...</td>\n",
+       "      <td>[using, quotfancyquot, quotes, links, library,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43415781</th>\n",
+       "      <td>77268178</td>\n",
+       "      <td>2023-10-10 18:28:03.690</td>\n",
+       "      <td>I want to add comments to the shell commands r...</td>\n",
+       "      <td>[comments, shell, commands, nextflow, process,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43415782</th>\n",
+       "      <td>77264682</td>\n",
+       "      <td>2023-10-10 09:52:02.273</td>\n",
+       "      <td>Im using macOS 116 After restarting VS Code th...</td>\n",
+       "      <td>[using, macOS, After, restarting, windows, des...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43415783</th>\n",
+       "      <td>77256652</td>\n",
+       "      <td>2023-10-09 06:28:21.850</td>\n",
+       "      <td>I am trying to implement the producer and cons...</td>\n",
+       "      <td>[trying, implement, producer, consumer, proble...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43415784</th>\n",
+       "      <td>77233053</td>\n",
+       "      <td>2023-10-04 21:20:14.783</td>\n",
+       "      <td>I am trying to train my model and log both the...</td>\n",
+       "      <td>[trying, train, model, train, perplexity, noth...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1629546 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                id            creationdate  \\\n",
+       "43        74084204 2022-10-16 02:22:46.293   \n",
+       "44        74049122 2022-10-13 00:00:13.400   \n",
+       "45        74025233 2022-10-11 08:34:24.547   \n",
+       "46        73975523 2022-10-06 14:28:25.093   \n",
+       "47        73972231 2022-10-06 10:21:18.360   \n",
+       "...            ...                     ...   \n",
+       "43414027  77303116 2023-10-16 15:12:18.237   \n",
+       "43415781  77268178 2023-10-10 18:28:03.690   \n",
+       "43415782  77264682 2023-10-10 09:52:02.273   \n",
+       "43415783  77256652 2023-10-09 06:28:21.850   \n",
+       "43415784  77233053 2023-10-04 21:20:14.783   \n",
+       "\n",
+       "                                                  body_prep  \\\n",
+       "43        If you still want to have access to the consol...   \n",
+       "44        I am trying to figure out if someone reacted t...   \n",
+       "45                                                 Solution   \n",
+       "46        Without extension you cannot change urls and c...   \n",
+       "47                      I fixed this problem i just use and   \n",
+       "...                                                     ...   \n",
+       "43414027  Im using quotfancyquot quotes in my links this...   \n",
+       "43415781  I want to add comments to the shell commands r...   \n",
+       "43415782  Im using macOS 116 After restarting VS Code th...   \n",
+       "43415783  I am trying to implement the producer and cons...   \n",
+       "43415784  I am trying to train my model and log both the...   \n",
+       "\n",
+       "                                                      over4  \n",
+       "43        [still, access, console, while, looking, pictu...  \n",
+       "44        [trying, figure, someone, reacted, message, tr...  \n",
+       "45                                               [Solution]  \n",
+       "46          [Without, extension, cannot, change, customize]  \n",
+       "47                                         [fixed, problem]  \n",
+       "...                                                     ...  \n",
+       "43414027  [using, quotfancyquot, quotes, links, library,...  \n",
+       "43415781  [comments, shell, commands, nextflow, process,...  \n",
+       "43415782  [using, macOS, After, restarting, windows, des...  \n",
+       "43415783  [trying, implement, producer, consumer, proble...  \n",
+       "43415784  [trying, train, model, train, perplexity, noth...  \n",
+       "\n",
+       "[1629546 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_bodyconcat_wl"
    ]
   },
   {
