--- a/DA/0_data_extract.ipynb
+++ b/DA/0_data_extract.ipynb
@@ -2020,16 +2020,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_wl = df_body[['id', 'creationdate', 'body_prep']].copy()"
+    "df_wl = df_body[['id', 'creationdate', 'body_prep', 'posttypeid']].copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2038,7 +2038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2048,7 +2048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2066,7 +2066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2088,7 +2088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2112,145 +2112,96 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>id</th>\n",
        "      <th>creationdate</th>\n",
+       "      <th>id</th>\n",
+       "      <th>posttypeid</th>\n",
+       "      <th>title</th>\n",
+       "      <th>owneruserid</th>\n",
+       "      <th>body</th>\n",
+       "      <th>answered_yn</th>\n",
+       "      <th>date</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
        "      <th>body_prep</th>\n",
-       "      <th>over4</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>74084204</td>\n",
-       "      <td>2022-10-16 02:22:46.293</td>\n",
-       "      <td>If you still want to have access to the consol...</td>\n",
-       "      <td>[still, access, console, while, looking, pictu...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>74049122</td>\n",
-       "      <td>2022-10-13 00:00:13.400</td>\n",
-       "      <td>I am trying to figure out if someone reacted t...</td>\n",
-       "      <td>[trying, figure, someone, reacted, message, tr...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>74025233</td>\n",
-       "      <td>2022-10-11 08:34:24.547</td>\n",
-       "      <td>Solution</td>\n",
-       "      <td>[Solution]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>73975523</td>\n",
-       "      <td>2022-10-06 14:28:25.093</td>\n",
-       "      <td>Without extension you cannot change urls and c...</td>\n",
-       "      <td>[Without, extension, cannot, change, customize]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>73972231</td>\n",
-       "      <td>2022-10-06 10:21:18.360</td>\n",
-       "      <td>I fixed this problem i just use and</td>\n",
-       "      <td>[fixed, problem]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43414027</th>\n",
-       "      <td>77303116</td>\n",
-       "      <td>2023-10-16 15:12:18.237</td>\n",
-       "      <td>Im using quotfancyquot quotes in my links this...</td>\n",
-       "      <td>[using, quotfancyquot, quotes, links, library,...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43415781</th>\n",
-       "      <td>77268178</td>\n",
-       "      <td>2023-10-10 18:28:03.690</td>\n",
-       "      <td>I want to add comments to the shell commands r...</td>\n",
-       "      <td>[comments, shell, commands, nextflow, process,...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43415782</th>\n",
-       "      <td>77264682</td>\n",
-       "      <td>2023-10-10 09:52:02.273</td>\n",
-       "      <td>Im using macOS 116 After restarting VS Code th...</td>\n",
-       "      <td>[using, macOS, After, restarting, windows, des...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43415783</th>\n",
-       "      <td>77256652</td>\n",
-       "      <td>2023-10-09 06:28:21.850</td>\n",
-       "      <td>I am trying to implement the producer and cons...</td>\n",
-       "      <td>[trying, implement, producer, consumer, proble...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43415784</th>\n",
-       "      <td>77233053</td>\n",
-       "      <td>2023-10-04 21:20:14.783</td>\n",
-       "      <td>I am trying to train my model and log both the...</td>\n",
-       "      <td>[trying, train, model, train, perplexity, noth...</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1629546 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                id            creationdate  \\\n",
-       "43        74084204 2022-10-16 02:22:46.293   \n",
-       "44        74049122 2022-10-13 00:00:13.400   \n",
-       "45        74025233 2022-10-11 08:34:24.547   \n",
-       "46        73975523 2022-10-06 14:28:25.093   \n",
-       "47        73972231 2022-10-06 10:21:18.360   \n",
-       "...            ...                     ...   \n",
-       "43414027  77303116 2023-10-16 15:12:18.237   \n",
-       "43415781  77268178 2023-10-10 18:28:03.690   \n",
-       "43415782  77264682 2023-10-10 09:52:02.273   \n",
-       "43415783  77256652 2023-10-09 06:28:21.850   \n",
-       "43415784  77233053 2023-10-04 21:20:14.783   \n",
-       "\n",
-       "                                                  body_prep  \\\n",
-       "43        If you still want to have access to the consol...   \n",
-       "44        I am trying to figure out if someone reacted t...   \n",
-       "45                                                 Solution   \n",
-       "46        Without extension you cannot change urls and c...   \n",
-       "47                      I fixed this problem i just use and   \n",
-       "...                                                     ...   \n",
-       "43414027  Im using quotfancyquot quotes in my links this...   \n",
-       "43415781  I want to add comments to the shell commands r...   \n",
-       "43415782  Im using macOS 116 After restarting VS Code th...   \n",
-       "43415783  I am trying to implement the producer and cons...   \n",
-       "43415784  I am trying to train my model and log both the...   \n",
-       "\n",
-       "                                                      over4  \n",
-       "43        [still, access, console, while, looking, pictu...  \n",
-       "44        [trying, figure, someone, reacted, message, tr...  \n",
-       "45                                               [Solution]  \n",
-       "46          [Without, extension, cannot, change, customize]  \n",
-       "47                                         [fixed, problem]  \n",
-       "...                                                     ...  \n",
-       "43414027  [using, quotfancyquot, quotes, links, library,...  \n",
-       "43415781  [comments, shell, commands, nextflow, process,...  \n",
-       "43415782  [using, macOS, After, restarting, windows, des...  \n",
-       "43415783  [trying, implement, producer, consumer, proble...  \n",
-       "43415784  [trying, train, model, train, perplexity, noth...  \n",
-       "\n",
-       "[1629546 rows x 4 columns]"
+       "Empty DataFrame\n",
+       "Columns: [creationdate, id, posttypeid, title, owneruserid, body, answered_yn, date, year, month, day, body_prep]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>creationdate</th>\n",
+       "      <th>id</th>\n",
+       "      <th>posttypeid</th>\n",
+       "      <th>title</th>\n",
+       "      <th>owneruserid</th>\n",
+       "      <th>body</th>\n",
+       "      <th>answered_yn</th>\n",
+       "      <th>date</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>body_prep</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [creationdate, id, posttypeid, title, owneruserid, body, answered_yn, date, year, month, day, body_prep]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_bodyconcat_wl"
+    "df_body[df_body['id'] == 73954716]"
    ]
   },
   {
