--- a/DA/5_content_volumn.ipynb
+++ b/DA/5_content_volumn.ipynb
@@ -157,16 +157,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_tmp1 = df_topic_day.loc[df_topic_day['treat']==0, :].head(6)"
+    "df_tmp1 = df_topic_day.loc[df_topic_day['treat']==0, :].head(4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>tag</th>\n",
+       "      <th>q_count</th>\n",
+       "      <th>treat</th>\n",
+       "      <th>post</th>\n",
+       "      <th>rel_day</th>\n",
+       "      <th>rel_week</th>\n",
+       "      <th>subreddit_name</th>\n",
+       "      <th>subs</th>\n",
+       "      <th>posts</th>\n",
+       "      <th>comments</th>\n",
+       "      <th>rel_month</th>\n",
+       "      <th>treated</th>\n",
+       "      <th>fect_id</th>\n",
+       "      <th>ln_q_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-10-06</td>\n",
+       "      <td>.net</td>\n",
+       "      <td>48</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-56</td>\n",
+       "      <td>-8</td>\n",
+       "      <td>dotnet</td>\n",
+       "      <td>102578.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.871201</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021-10-07</td>\n",
+       "      <td>.net</td>\n",
+       "      <td>45</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-55</td>\n",
+       "      <td>-8</td>\n",
+       "      <td>dotnet</td>\n",
+       "      <td>102621.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.806662</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2021-10-08</td>\n",
+       "      <td>.net</td>\n",
+       "      <td>41</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-54</td>\n",
+       "      <td>-8</td>\n",
+       "      <td>dotnet</td>\n",
+       "      <td>102654.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.713572</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2021-10-09</td>\n",
+       "      <td>.net</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-53</td>\n",
+       "      <td>-8</td>\n",
+       "      <td>dotnet</td>\n",
+       "      <td>102688.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>119.0</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.833213</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         date   tag  q_count  treat  post  rel_day  rel_week subreddit_name  \\\n",
+       "0  2021-10-06  .net       48      0     0      -56        -8         dotnet   \n",
+       "1  2021-10-07  .net       45      0     0      -55        -8         dotnet   \n",
+       "2  2021-10-08  .net       41      0     0      -54        -8         dotnet   \n",
+       "3  2021-10-09  .net       17      0     0      -53        -8         dotnet   \n",
+       "\n",
+       "       subs  posts  comments  rel_month  treated  fect_id  ln_q_count  \n",
+       "0  102578.0   26.0     150.0         -2        0        1    3.871201  \n",
+       "1  102621.0   11.0      95.0         -2        0        1    3.806662  \n",
+       "2  102654.0   14.0      97.0         -2        0        1    3.713572  \n",
+       "3  102688.0    8.0     119.0         -2        0        1    2.833213  "
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_tmp1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_tmp2 = df_topic_day.loc[(df_topic_day['treat']==0) &(df_topic_day['tag']=='vue.js'), :].head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -281,117 +433,6 @@
        "      <td>2.833213</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2021-10-10</td>\n",
-       "      <td>.net</td>\n",
-       "      <td>13</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-52</td>\n",
-       "      <td>-8</td>\n",
-       "      <td>dotnet</td>\n",
-       "      <td>102729.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>-2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.564949</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2021-10-11</td>\n",
-       "      <td>.net</td>\n",
-       "      <td>37</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-51</td>\n",
-       "      <td>-8</td>\n",
-       "      <td>dotnet</td>\n",
-       "      <td>102779.0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>111.0</td>\n",
-       "      <td>-2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3.610918</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         date   tag  q_count  treat  post  rel_day  rel_week subreddit_name  \\\n",
-       "0  2021-10-06  .net       48      0     0      -56        -8         dotnet   \n",
-       "1  2021-10-07  .net       45      0     0      -55        -8         dotnet   \n",
-       "2  2021-10-08  .net       41      0     0      -54        -8         dotnet   \n",
-       "3  2021-10-09  .net       17      0     0      -53        -8         dotnet   \n",
-       "4  2021-10-10  .net       13      0     0      -52        -8         dotnet   \n",
-       "5  2021-10-11  .net       37      0     0      -51        -8         dotnet   \n",
-       "\n",
-       "       subs  posts  comments  rel_month  treated  fect_id  ln_q_count  \n",
-       "0  102578.0   26.0     150.0         -2        0        1    3.871201  \n",
-       "1  102621.0   11.0      95.0         -2        0        1    3.806662  \n",
-       "2  102654.0   14.0      97.0         -2        0        1    3.713572  \n",
-       "3  102688.0    8.0     119.0         -2        0        1    2.833213  \n",
-       "4  102729.0   18.0      90.0         -2        0        1    2.564949  \n",
-       "5  102779.0   15.0     111.0         -2        0        1    3.610918  "
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_tmp1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>tag</th>\n",
-       "      <th>q_count</th>\n",
-       "      <th>treat</th>\n",
-       "      <th>post</th>\n",
-       "      <th>rel_day</th>\n",
-       "      <th>rel_week</th>\n",
-       "      <th>subreddit_name</th>\n",
-       "      <th>subs</th>\n",
-       "      <th>posts</th>\n",
-       "      <th>comments</th>\n",
-       "      <th>rel_month</th>\n",
-       "      <th>treated</th>\n",
-       "      <th>fect_id</th>\n",
-       "      <th>ln_q_count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
        "      <th>15778</th>\n",
        "      <td>2021-10-06</td>\n",
        "      <td>vue.js</td>\n",
@@ -445,102 +486,51 @@
        "      <td>50</td>\n",
        "      <td>4.110874</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15781</th>\n",
-       "      <td>2021-10-09</td>\n",
-       "      <td>vue.js</td>\n",
-       "      <td>17</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-53</td>\n",
-       "      <td>-8</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>50</td>\n",
-       "      <td>2.833213</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15782</th>\n",
-       "      <td>2021-10-10</td>\n",
-       "      <td>vue.js</td>\n",
-       "      <td>24</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-52</td>\n",
-       "      <td>-8</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>50</td>\n",
-       "      <td>3.178054</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15783</th>\n",
-       "      <td>2021-10-11</td>\n",
-       "      <td>vue.js</td>\n",
-       "      <td>51</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-51</td>\n",
-       "      <td>-8</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>50</td>\n",
-       "      <td>3.931826</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "             date     tag  q_count  treat  post  rel_day  rel_week  \\\n",
+       "0      2021-10-06    .net       48      0     0      -56        -8   \n",
+       "1      2021-10-07    .net       45      0     0      -55        -8   \n",
+       "2      2021-10-08    .net       41      0     0      -54        -8   \n",
+       "3      2021-10-09    .net       17      0     0      -53        -8   \n",
        "15778  2021-10-06  vue.js       57      0     0      -56        -8   \n",
        "15779  2021-10-07  vue.js       65      0     0      -55        -8   \n",
        "15780  2021-10-08  vue.js       61      0     0      -54        -8   \n",
-       "15781  2021-10-09  vue.js       17      0     0      -53        -8   \n",
-       "15782  2021-10-10  vue.js       24      0     0      -52        -8   \n",
-       "15783  2021-10-11  vue.js       51      0     0      -51        -8   \n",
        "\n",
-       "      subreddit_name  subs  posts  comments  rel_month  treated  fect_id  \\\n",
-       "15778            NaN   NaN    NaN       NaN         -2        0       50   \n",
-       "15779            NaN   NaN    NaN       NaN         -2        0       50   \n",
-       "15780            NaN   NaN    NaN       NaN         -2        0       50   \n",
-       "15781            NaN   NaN    NaN       NaN         -2        0       50   \n",
-       "15782            NaN   NaN    NaN       NaN         -2        0       50   \n",
-       "15783            NaN   NaN    NaN       NaN         -2        0       50   \n",
+       "      subreddit_name      subs  posts  comments  rel_month  treated  fect_id  \\\n",
+       "0             dotnet  102578.0   26.0     150.0         -2        0        1   \n",
+       "1             dotnet  102621.0   11.0      95.0         -2        0        1   \n",
+       "2             dotnet  102654.0   14.0      97.0         -2        0        1   \n",
+       "3             dotnet  102688.0    8.0     119.0         -2        0        1   \n",
+       "15778            NaN       NaN    NaN       NaN         -2        0       50   \n",
+       "15779            NaN       NaN    NaN       NaN         -2        0       50   \n",
+       "15780            NaN       NaN    NaN       NaN         -2        0       50   \n",
        "\n",
        "       ln_q_count  \n",
+       "0        3.871201  \n",
+       "1        3.806662  \n",
+       "2        3.713572  \n",
+       "3        2.833213  \n",
        "15778    4.043051  \n",
        "15779    4.174387  \n",
-       "15780    4.110874  \n",
-       "15781    2.833213  \n",
-       "15782    3.178054  \n",
-       "15783    3.931826  "
+       "15780    4.110874  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_topic_day.loc[(df_topic_day['treat']==0) &(df_topic_day['tag']=='vue.js'), :].head(6)"
+    "pd.concat([df_tmp1,df_tmp2], axis = 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +636,7 @@
        "[16100 rows x 2 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
