--- a/DA/6_refutation.ipynb
+++ b/DA/6_refutation.ipynb
@@ -115,78 +115,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 146 entries, 0 to 145\n",
-      "Data columns (total 52 columns):\n",
-      " #   Column               Non-Null Count  Dtype \n",
-      "---  ------               --------------  ----- \n",
-      " 0   cdate                146 non-null    object\n",
-      " 1   del_yn               146 non-null    int64 \n",
-      " 2   python               146 non-null    int64 \n",
-      " 3   javascript           146 non-null    int64 \n",
-      " 4   reactjs              146 non-null    int64 \n",
-      " 5   java                 146 non-null    int64 \n",
-      " 6   c#                   146 non-null    int64 \n",
-      " 7   html                 146 non-null    int64 \n",
-      " 8   r                    146 non-null    int64 \n",
-      " 9   pandas               146 non-null    int64 \n",
-      " 10  css                  146 non-null    int64 \n",
-      " 11  flutter              146 non-null    int64 \n",
-      " 12  sql                  146 non-null    int64 \n",
-      " 13  android              146 non-null    int64 \n",
-      " 14  nodejs               146 non-null    int64 \n",
-      " 15  cplusplus            146 non-null    int64 \n",
-      " 16  typescript           146 non-null    int64 \n",
-      " 17  php                  146 non-null    int64 \n",
-      " 18  python_3x            146 non-null    int64 \n",
-      " 19  dataframe            146 non-null    int64 \n",
-      " 20  arrays               146 non-null    int64 \n",
-      " 21  angular              146 non-null    int64 \n",
-      " 22  django               146 non-null    int64 \n",
-      " 23  json                 146 non-null    int64 \n",
-      " 24  dart                 146 non-null    int64 \n",
-      " 25  mysql                146 non-null    int64 \n",
-      " 26  c                    146 non-null    int64 \n",
-      " 27  excel                146 non-null    int64 \n",
-      " 28  laravel              146 non-null    int64 \n",
-      " 29  swift                146 non-null    int64 \n",
-      " 30  spring_boot          146 non-null    int64 \n",
-      " 31  amazon_web_services  146 non-null    int64 \n",
-      " 32  react_native         146 non-null    int64 \n",
-      " 33  postgresql           146 non-null    int64 \n",
-      " 34  azure                146 non-null    int64 \n",
-      " 35  kotlin               146 non-null    int64 \n",
-      " 36  docker               146 non-null    int64 \n",
-      " 37  list                 146 non-null    int64 \n",
-      " 38  firebase             146 non-null    int64 \n",
-      " 39  ios                  146 non-null    int64 \n",
-      " 40  sql_server           146 non-null    int64 \n",
-      " 41  jquery               146 non-null    int64 \n",
-      " 42  mongodb              146 non-null    int64 \n",
-      " 43  vuejs                146 non-null    int64 \n",
-      " 44  numpy                146 non-null    int64 \n",
-      " 45  net                  146 non-null    int64 \n",
-      " 46  vba                  146 non-null    int64 \n",
-      " 47  regex                146 non-null    int64 \n",
-      " 48  string               146 non-null    int64 \n",
-      " 49  spring               146 non-null    int64 \n",
-      " 50  powershell           146 non-null    int64 \n",
-      " 51  linux                146 non-null    int64 \n",
-      "dtypes: int64(51), object(1)\n",
-      "memory usage: 59.4+ KB\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Index(['python', 'javascript', 'reactjs', 'java', 'c#', 'html', 'r', 'pandas',\n",
+       "       'css', 'flutter', 'sql', 'android', 'nodejs', 'cplusplus', 'typescript',\n",
+       "       'php', 'python_3x', 'dataframe', 'arrays', 'angular', 'django', 'json',\n",
+       "       'dart', 'mysql', 'c', 'excel', 'laravel', 'swift', 'spring_boot',\n",
+       "       'amazon_web_services', 'react_native', 'postgresql', 'azure', 'kotlin',\n",
+       "       'docker', 'list', 'firebase', 'ios', 'sql_server', 'jquery', 'mongodb',\n",
+       "       'vuejs', 'numpy', 'net', 'vba', 'regex', 'string', 'spring',\n",
+       "       'powershell', 'linux'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "cond3_treat_1_2.info()"
+    "cond3_treat_0_1.columns[2:]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
